--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,24 @@
+<h1>Create a Team and Heroes!</h1>
 
+<form method="POST" action="/teams">
+  Team Name: <input type="text" name="team[name]">
+  Team Motto: <input type="text" name="team[motto]">
+
+  <h2>Hero 1</h2>
+  Hero's Name: <input type="text" id="member1_name" name="team[members][][name]">
+  Hero's Power: <input type="text" id="member1_power" name="team[members][][power]">
+  Hero's Biography: <input type="text" id="member1_bio" name="team[members][][bio]">
+
+  <h2>Hero 2</h2>
+  Hero's Name: <input type="text" id="member2_name" name="team[members][][name]">
+  Hero's Power: <input type="text" id="member2_power" name="team[members][][power]">
+  Hero's Biography: <input type="text" id="member2_bio" name="team[members][][bio]">
+
+  <h2>Hero 3</h2>
+  Hero's Name: <input type="text" id="member3_name" name="team[members][][name]">
+  Hero's Power: <input type="text" id="member3_power" name="team[members][][power]">
+  Hero's Biography: <input type="text" id="member3_bio" name="team[members][][bio]">
+
+  <input type="submit" value="Submit">
+
+</form>
