Automatically backed up by Learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,6 @@
+<h1>Flatiron</h1>
 
-
+<h2>Hero Name: <%= hero.name %></h2>
+<h2>Hero Name: <%= hero.power %></h2>
+<h2>Hero Name: <%= hero.bio %></h2>
 
