Automatically backed up by Learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,6 +1,6 @@
-<h1>Flatiron</h1>
+<h1>Team Name:</h1> <%= @team.name %>
+<h1>Team Motto:</h1> <%= @team.motto %>
 
-<h2>Hero Name: <%= hero.name %></h2>
-<h2>Hero Name: <%= hero.power %></h2>
-<h2>Hero Name: <%= hero.bio %></h2>
-
+<h2>Team Name: <%= team.name %></h2>
+<h2>Team Name: <%= hero.power %></h2>
+<h2>Team Name: <%= hero.bio %></h2>
