--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,2 +1,9 @@
-<h1>Team Name:</h1> <%= @team.name %>
+<h1>Team Name:</h1> <%= @team.name %><br>
 <h2>Team Motto:</h2> <%= @team.motto %>
+
+<h1>Heroes</h1>
+<% @super_heroes.each do |hero| %>
+  <p>Hero Name: <%= hero.name %></p><br>
+  <p>Hero Power: <%= hero.power %></p><br>
+  <p>Hero Biography: <%= hero.bio %></p>
+<% end %>
