--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -19,6 +19,6 @@
   Hero's Power: <input type="text" id="member3_power" name="team[members][][power]">
   Hero's Biography: <input type="text" id="member3_bio" name="team[members][][bio]">
 
-  <input type="submit" value="Submit">
+  <button id="submit" type="submit">Submit</button>
 
 </form>
